Fixes #6 - visibility: hidden

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -5849,3 +5849,12 @@ button.close {
     overflow: visible !important;
   }
 }
+
+
+
+.iframes {
+  height: 1px;
+  width: 1px;
+  overflow: hidden;
+}
+
